--- a/index.html
+++ b/index.html
@@ -14,32 +14,33 @@
 	
 	<header>
 		<div class="container">
-		<div class="row">
-			<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
-			<ul class="nav nav-tabs justify-content-center header__nav">
-			  <li class="nav-item">
-			    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
-			  </li>
-			  <li class="nav-item dropdown">
-			    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
-			    <div class="dropdown-menu">
-			      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
-			      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="esports.html">ESPORTS</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="soporte.html">SOPORTE</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="informacionAdicional.html">INFORMACIÓN ADICIONAL</a>
-			  </li>
-			</ul>
+			<div class="row">
+				<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
+				<ul class="nav nav-tabs justify-content-center header__nav">
+				  <li class="nav-item">
+				    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
+				  </li>
+				  <li class="nav-item dropdown">
+				    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
+				    <div class="dropdown-menu">
+				      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
+				      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="esports.html">ESPORTS</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="soporte.html">SOPORTE</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="informacionAdicional.html">INFORMACIÓN ADICIONAL</a>
+				  </li>
+				</ul>
+			</div>
 		</div>
 	</header>
 
-	<div class="container-fluid">
+	<div style="width: 100%">
 		<img src="imagenes/auriStinger.jpg" class="img-fluid" alt="Responsive image">
 	</div>
 
@@ -51,19 +52,19 @@
 
 	<div class="container-fluid images">
 		<div class="row">			
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6 col-xl-3">
 				<a href="teclados.html"><img src="imagenes/teclado.jpg" class="img-fluid" alt="Responsive image">	
 				<p class="text-center images__title">Teclados</p></a>
 			</div>
-			<div class="col-12 col-md-6">			
+			<div class="col-12 col-md-6 col-xl-3">			
 				<a href="404.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
 				<p class="text-center images__title">Mouses</p></a>		
 			</div>
-			<div class="col-12 col-md-6">				
+			<div class="col-12 col-md-6 col-xl-3">				
 				<a href="404.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
 				<p class="text-center images__title">Memorias</p></a>
 			</div>
-			<div class="col-12 col-md-6">				
+			<div class="col-12 col-md-6 col-xl-3">				
 				<a href="auriculares.html"><img src="imagenes/auriculares.jpg" class="img-fluid" alt="Responsive image">
 				<p class="text-center images__title">Auriculares</p></a>
 			</div>			
