--- a/auriculares.html
+++ b/auriculares.html
@@ -49,12 +49,12 @@
 		</div>
 	</section>
 	
-	<img src="imagenes/cloudalpha1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Responsive image">
 
 	<section class="auriculares2">
 		<div class="auriculares2__text">
-			<h1>CloudX Alpha</h1>
-			<p>Más cámaras para una mejor distorsión.</p>
+			<h1>CloudX Flight</h1>
+			<p>Libertad inalámbrica fiable con una batería duradera.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
@@ -63,8 +63,8 @@
 	
 	<section class="auriculares3">
 		<div class="auriculares3__text">
-			<h1>Cloud Stinger</h1>
-			<p>Comodidad ligera. Sonido potente.</p>
+			<h1>Cloud Stinger Core</h1>
+			<p>Listos para jugar: Inalámbricos</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
