--- a/esports.html
+++ b/esports.html
@@ -41,21 +41,25 @@
 
 	<video id="videoContent" muted="" autoplay="" playsinline="" src="https://www.hyperxgaming.com/shared/videos/hx-hero-video-wag-LA-loop-1920.mp4" loop="" controls="" width="100%"></video>
 
-	<main class="esports__main">
-		
-		<div class="esports__main-text">
+	<div class="container">
 
-			<h1><strong>Esports</strong></h1>
+		<main class="esports__main">
+			
+			<div class="esports__main-text">
 
-			<p>Cada día, miles de millones de personas se despiertan, comen y encienden un videojuego como parte de su rutina habitual. Tanto si eres un profesional que entra en un telón de gasa en preparación para una gran competición, como si eres un transmisor que se instala para difundir el juego a legiones de aficionados, o alguien que navega en línea con sus amigos, o un usuario del tren de cercanías que pasa un buen rato durante el trayecto, todos jugamos.</p><br>
+				<h1><strong>Esports</strong></h1>
 
-			<p>En GameZone lo sabemos, porque estamos exactamente allí, contigo. Somos conscientes de que, a lo que sea que juegues, como quiera que lo hagas, todos somos jugadores. Nuestros productos están fabricados para mejorar tu vida en los videojuegos: nuestros auriculares ultracómodos Cloud, el ratón Pulsefire y los teclados Alloy duraderos y de respuesta rápida, los productos ChargePlay para mantener el equipo cargado y nuestras unidades SSD y RAM de alto rendimiento. Todo se ha diseñado, construido y configurado con precisión pensando en el jugador.</p><br>
+				<p>Cada día, miles de millones de personas se despiertan, comen y encienden un videojuego como parte de su rutina habitual. Tanto si eres un profesional que entra en un telón de gasa en preparación para una gran competición, como si eres un transmisor que se instala para difundir el juego a legiones de aficionados, o alguien que navega en línea con sus amigos, o un usuario del tren de cercanías que pasa un buen rato durante el trayecto, todos jugamos.</p><br>
 
-			<p>Consola o PC, casual o profesional, no importa tu credo, color o cultura; todos somos jugadores y el equipo GameZone siempre está listo para jugar. Nos vemos en la cola, #GameZoneFamily.</p><br>
+				<p>En GameZone lo sabemos, porque estamos exactamente allí, contigo. Somos conscientes de que, a lo que sea que juegues, como quiera que lo hagas, todos somos jugadores. Nuestros productos están fabricados para mejorar tu vida en los videojuegos: nuestros auriculares ultracómodos Cloud, el ratón Pulsefire y los teclados Alloy duraderos y de respuesta rápida, los productos ChargePlay para mantener el equipo cargado y nuestras unidades SSD y RAM de alto rendimiento. Todo se ha diseñado, construido y configurado con precisión pensando en el jugador.</p><br>
 
-		</div>
+				<p>Consola o PC, casual o profesional, no importa tu credo, color o cultura; todos somos jugadores y el equipo GameZone siempre está listo para jugar. Nos vemos en la cola, #GameZoneFamily.</p><br>
 
-	</main>	
+			</div>
+
+		</main>	
+
+	</div>
 
 	<div class="esports__sec">
 
@@ -110,7 +114,7 @@
 
 	</div>
 
-	<div class="esports__ter">
+	<div class="container esports__ter">
 
 		<span><strong>Estas son algunas organizaciones afiliadas:</strong></span>
 
