--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<meta name="description" content="Una de las principales tiendas online que te otorga la posibilidad de comprar los mejores productos a tu región o país.">
 	<meta name="keywords" content="tienda, online, gamer, gaming, tecnología, juegos"> 
+	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -40,36 +41,36 @@
 		</div>
 	</header>
 
-	<div style="width: 100%">
-		<img src="imagenes/auriStinger.jpg" class="img-fluid" alt="Responsive image">
+	<div class="container-fluid main__text">
+		<div class="container">
+			<h1 class="main__text-text">La mejor página de tecnología.</h1>	
+		</div>
 	</div>
 
 	<hr>
 
-	<div class="container" class="main">
-		<h1 class="main__text">La mejor página de venta de tecnología</h1>	
-	</div><br><br>
-
-	<div class="container-fluid images">
-		<div class="row">			
-			<div class="col-12 col-md-6 col-xl-3">
-				<a href="teclados.html"><img src="imagenes/teclado.jpg" class="img-fluid" alt="Responsive image">	
-				<p class="text-center images__title">Teclados</p></a>
+	<section>
+		<div class="container-fluid images">
+			<div class="row">			
+				<div class="col-12 col-md-4 col-lg-3">
+					<a href="teclados.html"><img src="imagenes/teclado.jpg" class="img-fluid" alt="Responsive image">	
+					<p class="text-center images__title">Teclados</p></a>
+				</div>
+				<div class="col-12 col-md-4 col-lg-3">			
+					<a href="404.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
+					<p class="text-center images__title">Mouses</p></a>		
+				</div>
+				<div class="col-12 col-md-4 col-lg-3">				
+					<a href="404.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
+					<p class="text-center images__title">Memorias</p></a>
+				</div>
+				<div class="col-12 col-md-4 col-lg-3">				
+					<a href="auriculares.html"><img src="imagenes/auriculares.jpg" class="img-fluid" alt="Responsive image">
+					<p class="text-center images__title">Auriculares</p></a>
+				</div>			
 			</div>
-			<div class="col-12 col-md-6 col-xl-3">			
-				<a href="404.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
-				<p class="text-center images__title">Mouses</p></a>		
-			</div>
-			<div class="col-12 col-md-6 col-xl-3">				
-				<a href="404.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
-				<p class="text-center images__title">Memorias</p></a>
-			</div>
-			<div class="col-12 col-md-6 col-xl-3">				
-				<a href="auriculares.html"><img src="imagenes/auriculares.jpg" class="img-fluid" alt="Responsive image">
-				<p class="text-center images__title">Auriculares</p></a>
-			</div>			
 		</div>
-	</div>
+	</section>		
 
 	<footer>
 		<p>Proyecto desarrollo web Lucas Mamani</p>
