--- a/memorias.html
+++ b/memorias.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>GameZone - Auriculares</title>
+	<title>GameZone - Memorias</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Los mejores auriculares que sobresalen en su comodidad y calidad te harán sentir como si estuvieses dentro del juego.">
-	<meta name="keywords" content="auriculares, gaming, gamer, fps">
+	<meta name="description" content="Los mouses de nueva generación con el nuevo sensor que te permitirá destacarte entre todos">
+	<meta name="keywords" content="mouses, gaming, gamer, fps">
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
@@ -42,32 +42,32 @@
 		</div>
 	</header>
 
-	<img src="imagenes/auriculares1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias1.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares1">
-		<div class="auriculares1__text">
-			<h1>Cloud Alpha S</h1>
-			<p>Con sonido envolvente y graves ajustables.</p>
+	<section class="teclados1">
+		<div class="teclados1__text">
+			<h1>FURY DDR4</h1>
+			<p>Da rienda suelta a tu estilo. Da rienda suelta a tu FURY.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
 	
-	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias2.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares2">
-		<div class="auriculares2__text">
-			<h1>CloudX Flight</h1>
-			<p>Libertad inalámbrica fiable con una batería duradera.</p>
+	<section class="teclados2">
+		<div class="teclados2__text">
+			<h1>Predator DDR4</h1>
+			<p>Nuevas velocidades más rápidas de hasta 4600MHz para que notes una mejora extrema del rendimiento.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
 
-	<img src="imagenes/auriculares3.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias3.jpg" class="img-fluid" alt="Responsive image">
 	
-	<section class="auriculares3">
-		<div class="auriculares3__text">
-			<h1 style="color: black">Cloud Stinger Core</h1>
-			<p style="color: black">Listos para jugar: Inalámbricos</p>
+	<section class="teclados3">
+		<div class="teclados3__text">
+			<h1>Impact</h1>
+			<p>Memoria Plug N Play para portátiles y sistemas de pequeño formato.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
@@ -89,10 +89,11 @@
 	<footer>
 		<p>Proyecto desarrollo web Lucas Mamani</p>
 	</footer>
-
+	
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 </html>
