--- a/mouses.html
+++ b/mouses.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>GameZone - Auriculares</title>
+	<title>GameZone - Mouses</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<meta name="description" content="Los mejores auriculares que sobresalen en su comodidad y calidad te harán sentir como si estuvieses dentro del juego.">
@@ -42,32 +42,32 @@
 		</div>
 	</header>
 
-	<img src="imagenes/auriculares1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/mouses1.jpg" class="img-fluid" alt="Responsive image">
 
 	<section class="auriculares1">
 		<div class="auriculares1__text">
-			<h1>Cloud Alpha S</h1>
-			<p>Con sonido envolvente y graves ajustables.</p>
+			<h1>Pulsefire Raid</h1>
+			<p>Lidera el campo de batalla con este ligero ratón programable de 11 botones.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
 	
-	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/mouses2.jpg" class="img-fluid" alt="Responsive image">
 
 	<section class="auriculares2">
 		<div class="auriculares2__text">
-			<h1>CloudX Flight</h1>
-			<p>Libertad inalámbrica fiable con una batería duradera.</p>
+			<h1>Pulsefire Dart</h1>
+			<p>La mejor precisión con la total libertad de un dispositivo inalámbrico.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
 
-	<img src="imagenes/auriculares3.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/mouses3.jpg" class="img-fluid" alt="Responsive image">
 	
 	<section class="auriculares3">
 		<div class="auriculares3__text">
-			<h1 style="color: black">Cloud Stinger Core</h1>
-			<p style="color: black">Listos para jugar: Inalámbricos</p>
+			<h1>Pulsefire Surge</h1>
+			<p>Precisión milimétrica junto con un retroiluminado 360° RGB</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
 		</div>
 	</section>
