--- a/soporte.html
+++ b/soporte.html
@@ -25,6 +25,8 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
             <a class="dropdown-item" href="teclados.html">TECLADOS</a>
+            <a class="dropdown-item" href="memorias.html">MEMORIAS</a>
+            <a class="dropdown-item" href="mouses.html">MOUSES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="esports.html">ESPORTS</a>
@@ -57,7 +59,7 @@
         <div class="card-body subtitle__text">
           <span>Correo electrónico del servicio de atención al cliente</span>
           <p>Complete un corto formulario para una pronta resolución</p>
-          <a href="Soporte/soportece.html"><button type="button" class="btn btn-danger">Correo Electrónico</button></a><br><br>
+          <a href="soportece.html"><button type="button" class="btn btn-danger">Correo Electrónico</button></a><br><br>
           <span>Llame al Servicio al cliente</span>
           <p>Lunes-Viernes 7hs-14hs</p>
         </div>
@@ -76,7 +78,7 @@
         <div class="card-body subtitle__text">
           <span>Correo electrónico del departamento de asistencia técnica</span>
           <p>Complete un corto formulario para una pronta resolución</p>
-          <a href="Soporte/soportece.html"><button type="button" class="btn btn-danger">Correo Electrónico</button></a><br><br>
+          <a href="soportece.html"><button type="button" class="btn btn-danger">Correo Electrónico</button></a><br><br>
         </div>
       </div>
     </div>
