--- a/index.html
+++ b/index.html
@@ -15,36 +15,35 @@
 	
 	<header>
 		<div class="container">
-			<div class="row">
-				<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
-				<ul class="nav nav-tabs justify-content-center header__nav">
-				  <li class="nav-item">
-				    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
-				  </li>
-				  <li class="nav-item dropdown">
-				    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
-				    <div class="dropdown-menu">
-				      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
-				      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="esports.html">ESPORTS</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="soporte.html">SOPORTE</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="informacionAdicional.html">INFORMACIÓN ADICIONAL</a>
-				  </li>
-				</ul>
-			</div>
+		<div class="row">
+			<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
+			<ul class="nav nav-tabs justify-content-center header__nav">
+			  <li class="nav-item">
+			    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
+			  </li>
+			  <li class="nav-item dropdown">
+			    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
+			    <div class="dropdown-menu">
+			      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
+			      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
+			      <a class="dropdown-item" href="memorias.html">MEMORIAS</a>
+			      <a class="dropdown-item" href="mouses.html">MOUSES</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="esports.html">ESPORTS</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="soporte.html">SOPORTE</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="informacionAdicional.html">INFORMACIÓN ADICIONAL</a>
+			  </li>
+			</ul>
 		</div>
 	</header>
 
 	<div class="container-fluid main__text">
-		<div class="container">
 			<h1 class="main__text-text">La mejor página de tecnología.</h1>	
-		</div>
 	</div>
 
 	<hr>
@@ -57,11 +56,11 @@
 					<p class="text-center images__title">Teclados</p></a>
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">			
-					<a href="404.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
+					<a href="mouses.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
 					<p class="text-center images__title">Mouses</p></a>		
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">				
-					<a href="404.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
+					<a href="memorias.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
 					<p class="text-center images__title">Memorias</p></a>
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">				
