--- a/informacionAdicional.html
+++ b/informacionAdicional.html
@@ -24,6 +24,8 @@
 			    <div class="dropdown-menu">
 			      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
 			      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
+			      <a class="dropdown-item" href="memorias.html">MEMORIAS</a>
+			      <a class="dropdown-item" href="mouses.html">MOUSES</a>
 			  </li>
 			  <li class="nav-item">
 			    <a class="nav-link" href="esports.html">ESPORTS</a>
@@ -37,7 +39,6 @@
 			</ul>
 		</div>
 	</header>
-
   	<div class="marcoRojo"></div>
 
   	<div class="informacionAdicional__text">
