--- a/teclados.html
+++ b/teclados.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<meta name="description" content="Los mejores teclados que promueven una mejor jugabilidad y comodidad durante el gaming y permite sobresalir ante los demás">
 	<meta name="keywords" content="teclados, gaming, gamer, fps">
+	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,6 +26,8 @@
 			    <div class="dropdown-menu">
 			      <a class="dropdown-item" href="auriculares.html">AURICULARES</a>
 			      <a class="dropdown-item" href="teclados.html">TECLADOS</a>
+			      <a class="dropdown-item" href="memorias.html">MEMORIAS</a>
+			      <a class="dropdown-item" href="mouses.html">MOUSES</a>
 			  </li>
 			  <li class="nav-item">
 			    <a class="nav-link" href="esports.html">ESPORTS</a>
