Cambié código y comprimí las imágenes nuevas

--- a/auriculares.html
+++ b/auriculares.html
@@ -44,8 +44,8 @@
 
 	<img src="imagenes/auriculares1.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares1">
-		<div class="auriculares1__text">
+	<section class="producto-pos4">
+		<div class="producto-pos4__text">
 			<h1>Cloud Alpha S</h1>
 			<p>Con sonido envolvente y graves ajustables.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -54,8 +54,8 @@
 	
 	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares2">
-		<div class="auriculares2__text">
+	<section class="producto-pos5">
+		<div class="producto-pos5__text">
 			<h1>CloudX Flight</h1>
 			<p>Libertad inalámbrica fiable con una batería duradera.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -64,8 +64,8 @@
 
 	<img src="imagenes/auriculares3.jpg" class="img-fluid" alt="Responsive image">
 	
-	<section class="auriculares3">
-		<div class="auriculares3__text">
+	<section class="producto-pos6">
+		<div class="producto-pos6__text">
 			<h1 style="color: black">Cloud Stinger Core</h1>
 			<p style="color: black">Listos para jugar: Inalámbricos</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
