--- a/memorias.html
+++ b/memorias.html
@@ -44,8 +44,8 @@
 
 	<img src="imagenes/memorias1.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="teclados1">
-		<div class="teclados1__text">
+	<section class="producto-pos1">
+		<div class="producto-pos1__text">
 			<h1>FURY DDR4</h1>
 			<p>Da rienda suelta a tu estilo. Da rienda suelta a tu FURY.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -54,8 +54,8 @@
 	
 	<img src="imagenes/memorias2.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="teclados2">
-		<div class="teclados2__text">
+	<section class="producto-pos2">
+		<div class="producto-pos2__text">
 			<h1>Predator DDR4</h1>
 			<p>Nuevas velocidades más rápidas de hasta 4600MHz para que notes una mejora extrema del rendimiento.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -64,8 +64,8 @@
 
 	<img src="imagenes/memorias3.jpg" class="img-fluid" alt="Responsive image">
 	
-	<section class="teclados3">
-		<div class="teclados3__text">
+	<section class="producto-pos3">
+		<div class="producto-pos3__text">
 			<h1>Impact</h1>
 			<p>Memoria Plug N Play para portátiles y sistemas de pequeño formato.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
