--- a/mouses.html
+++ b/mouses.html
@@ -44,8 +44,8 @@
 
 	<img src="imagenes/mouses1.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares1">
-		<div class="auriculares1__text">
+	<section class="producto-pos4">
+		<div class="producto-pos4__text">
 			<h1>Pulsefire Raid</h1>
 			<p>Lidera el campo de batalla con este ligero ratón programable de 11 botones.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -54,8 +54,8 @@
 	
 	<img src="imagenes/mouses2.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="auriculares2">
-		<div class="auriculares2__text">
+	<section class="producto-pos5">
+		<div class="producto-pos5__text">
 			<h1>Pulsefire Dart</h1>
 			<p>La mejor precisión con la total libertad de un dispositivo inalámbrico.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -64,8 +64,8 @@
 
 	<img src="imagenes/mouses3.jpg" class="img-fluid" alt="Responsive image">
 	
-	<section class="auriculares3">
-		<div class="auriculares3__text">
+	<section class="producto-pos6">
+		<div class="producto-pos6__text">
 			<h1>Pulsefire Surge</h1>
 			<p>Precisión milimétrica junto con un retroiluminado 360° RGB</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
