--- a/teclados.html
+++ b/teclados.html
@@ -44,8 +44,8 @@
 
 	<img src="imagenes/teclado1.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="teclados1">
-		<div class="teclados1__text">
+	<section class="producto-pos1">
+		<div class="producto-pos1__text">
 			<h1>Alloy Elite 2</h1>
 			<p>Para jugar. Para trabajar. Para todo.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -54,8 +54,8 @@
 	
 	<img src="imagenes/teclados2.jpg" class="img-fluid" alt="Responsive image">
 
-	<section class="teclados2">
-		<div class="teclados2__text">
+	<section class="producto-pos2">
+		<div class="producto-pos2__text">
 			<h1>Alloy Origins</h1>
 			<p>Teclado compacto con teclas mecánicas HyperX personalizadas.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
@@ -64,8 +64,8 @@
 
 	<img src="imagenes/teclados3.jpg" class="img-fluid" alt="Responsive image">
 	
-	<section class="teclados3">
-		<div class="teclados3__text">
+	<section class="producto-pos3">
+		<div class="producto-pos3__text">
 			<h1>Alloy FPS RGB</h1>
 			<p>Impresionante esplendor RGB con efectos dinámicos en un paquete compacto.</p>
 			<a href="404.html"><button type="button" class="btn btn-danger">Comprar</button></a>
