4 entrega del proyecto

--- a/auriculares.html
+++ b/auriculares.html
@@ -6,7 +6,7 @@
 	<title>GameZone - Auriculares</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Los mejores auriculares que sobresalen en su comodidad y calidad te harán sentir como si estuvieses dentro del juego.">
+	<meta name="description" content="Los mejores auriculares que sobresalen en su comodidad y calidad te harán sentir como si estuvieses dentro del juego. Cloud Alpha S - CloudX Flight . Cloud Stinger Core">
 	<meta name="keywords" content="auriculares, gaming, gamer, fps">
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
@@ -42,7 +42,7 @@
 		</div>
 	</header>
 
-	<img src="imagenes/auriculares1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/auriculares1.jpg" class="img-fluid" alt="Auriculares1">
 
 	<section class="producto-pos4">
 		<div class="producto-pos4__text">
@@ -52,7 +52,7 @@
 		</div>
 	</section>
 	
-	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/auriculares2.jpg" class="img-fluid" alt="Auriculares2">
 
 	<section class="producto-pos5">
 		<div class="producto-pos5__text">
@@ -62,7 +62,7 @@
 		</div>
 	</section>
 
-	<img src="imagenes/auriculares3.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/auriculares3.jpg" class="img-fluid" alt="Auriculares3">
 	
 	<section class="producto-pos6">
 		<div class="producto-pos6__text">
