--- a/esports.html
+++ b/esports.html
@@ -6,7 +6,7 @@
 	<title>GameZone - Esports</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="GameZone proporciona la mejor calidad para ti y los mejores equipos del mundo.">
+	<meta name="description" content="GameZone proporciona la mejor calidad para ti y los mejores equipos del mundo. Sé parte de esta gran familia y conoce a todos los integrantes.">
 	<meta name="keywords" content="esports, teams, equipos, profesional, gamer, gaming">
 </head>
 
