--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>GameZone - Página principal</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Una de las principales tiendas online que te otorga la posibilidad de comprar los mejores productos a tu región o país.">
+	<meta name="description" content="GameZone es una marca de equipos para juegos comprometida en garantizar que todos los jugadores sientan que están incluidos. No importa quién eres o a qué juegas.">
 	<meta name="keywords" content="tienda, online, gamer, gaming, tecnología, juegos"> 
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
 	<header>
 		<div class="container">
 		<div class="row">
-			<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
+			<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid header__logo" alt="Logo"></a>  
 			<ul class="nav nav-tabs justify-content-center header__nav">
 			  <li class="nav-item">
 			    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
@@ -52,19 +52,19 @@
 		<div class="container-fluid images">
 			<div class="row">			
 				<div class="col-12 col-md-4 col-lg-3">
-					<a href="teclados.html"><img src="imagenes/teclado.jpg" class="img-fluid" alt="Responsive image">	
+					<a href="teclados.html"><img src="imagenes/teclado.jpg" class="img-fluid" alt="img teclado">	
 					<p class="text-center images__title">Teclados</p></a>
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">			
-					<a href="mouses.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="Responsive image">
+					<a href="mouses.html"><img src="imagenes/mouse.jpg" class="img-fluid" alt="img mouse">
 					<p class="text-center images__title">Mouses</p></a>		
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">				
-					<a href="memorias.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="Responsive image">
+					<a href="memorias.html"><img src="imagenes/memoria.jpg" class="img-fluid" alt="img memoriaRAM">
 					<p class="text-center images__title">Memorias</p></a>
 				</div>
 				<div class="col-12 col-md-4 col-lg-3">				
-					<a href="auriculares.html"><img src="imagenes/auriculares.jpg" class="img-fluid" alt="Responsive image">
+					<a href="auriculares.html"><img src="imagenes/auriculares.jpg" class="img-fluid" alt="img Auriculares">
 					<p class="text-center images__title">Auriculares</p></a>
 				</div>			
 			</div>
