--- a/memorias.html
+++ b/memorias.html
@@ -6,8 +6,8 @@
 	<title>GameZone - Memorias</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Los mouses de nueva generación con el nuevo sensor que te permitirá destacarte entre todos">
-	<meta name="keywords" content="mouses, gaming, gamer, fps">
+	<meta name="description" content="Las nuevas memorias que marcarán la diferencia en todas las PCs de la actualidad. FURY DDR4 - Predator DDR4 - Impact ">
+	<meta name="keywords" content="memorias, gaming, gamer, fps">
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
@@ -42,7 +42,7 @@
 		</div>
 	</header>
 
-	<img src="imagenes/memorias1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias1.jpg" class="img-fluid" alt="Memoria1">
 
 	<section class="producto-pos1">
 		<div class="producto-pos1__text">
@@ -52,7 +52,7 @@
 		</div>
 	</section>
 	
-	<img src="imagenes/memorias2.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias2.jpg" class="img-fluid" alt="Memoria2">
 
 	<section class="producto-pos2">
 		<div class="producto-pos2__text">
@@ -62,7 +62,7 @@
 		</div>
 	</section>
 
-	<img src="imagenes/memorias3.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/memorias3.jpg" class="img-fluid" alt="Memoria3">
 	
 	<section class="producto-pos3">
 		<div class="producto-pos3__text">
