--- a/mouses.html
+++ b/mouses.html
@@ -6,7 +6,7 @@
 	<title>GameZone - Mouses</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Los mejores auriculares que sobresalen en su comodidad y calidad te harán sentir como si estuvieses dentro del juego.">
+	<meta name="description" content="Los mouses GameZone con tal comodidad en las manos que te harán sentir que tienes el campo de batalla bajo tu control. Pulsefire Raid - Pulsefire Dart - Pulsefire Surge">
 	<meta name="keywords" content="auriculares, gaming, gamer, fps">
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
