--- a/teclados.html
+++ b/teclados.html
@@ -6,7 +6,7 @@
 	<title>GameZone - Teclados</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<meta name="description" content="Los mejores teclados que promueven una mejor jugabilidad y comodidad durante el gaming y permite sobresalir ante los demás">
+	<meta name="description" content="Los mejores teclados que promueven una mejor jugabilidad y comodidad durante el gaming. Alloy Elite 2 - Alloy Origins - Alloy FPS RGB ">
 	<meta name="keywords" content="teclados, gaming, gamer, fps">
 	<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
@@ -42,7 +42,7 @@
 		</div>
 	</header>
 
-	<img src="imagenes/teclado1.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/teclado1.jpg" class="img-fluid" alt="Teclado1">
 
 	<section class="producto-pos1">
 		<div class="producto-pos1__text">
@@ -52,7 +52,7 @@
 		</div>
 	</section>
 	
-	<img src="imagenes/teclados2.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/teclados2.jpg" class="img-fluid" alt="Teclado2">
 
 	<section class="producto-pos2">
 		<div class="producto-pos2__text">
@@ -62,7 +62,7 @@
 		</div>
 	</section>
 
-	<img src="imagenes/teclados3.jpg" class="img-fluid" alt="Responsive image">
+	<img src="imagenes/teclados3.jpg" class="img-fluid" alt="Teclado3">
 	
 	<section class="producto-pos3">
 		<div class="producto-pos3__text">
