--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 		<div class="row">
 			<a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid header__logo" alt="Logo"></a>  
-			<ul class="nav nav-tabs justify-content-center header__nav">
+			<ul class="nav justify-content-center header__nav">
 			  <li class="nav-item">
 			    <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
 			  </li>
@@ -43,7 +43,7 @@
 	</header>
 
 	<div class="container-fluid main__text">
-			<h1 class="main__text-text">La mejor página de tecnología.</h1>	
+		<h1 class="main__text-text">La mejor página de tecnología.</h1>	
 	</div>
 
 	<hr>
@@ -72,7 +72,9 @@
 	</section>		
 
 	<footer>
-		<p>Proyecto desarrollo web Lucas Mamani</p>
+		<span class="container-fluid footer__end">
+			<div class="footer__end-text">Todos los derechos Reservados GameZone™. Lucas Mamani.</div>
+		</span>
 	</footer>
 
 	<!-- JS, Popper.js, and jQuery -->
