--- a/soporte.html
+++ b/soporte.html
@@ -16,7 +16,7 @@
     <div class="container">
     <div class="row">
       <a href="index.html"><img src="imagenes/logos/logo2.png" class="img-fluid" alt="Logo" class="header__logo"></a>  
-      <ul class="nav nav-tabs justify-content-center header__nav">
+      <ul class="nav justify-content-center header__nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">PÁGINA PRINCIPAL</a>
         </li>
@@ -258,8 +258,16 @@
 
   </div>
 
-    <footer>
-    <p>Proyecto desarrollo web Lucas Mamani</p>
+   <footer>
+    <span class="container-fluid footer__links">
+      <div class="footer__links-link"><a href="teclados.html">Teclados</a></div>
+      <div class="footer__links-link"><a href="mouses.html">Mouses</a></div>
+      <div class="footer__links-link"><a href="memorias.html">Memorias</a></div>
+      <div class="footer__links-link"><a href="auriculares.html">Auriculares</a></div>
+    </span>
+    <span class="container-fluid footer__end">
+      <div class="footer__end-text">Todos los derechos Reservados GameZone™. Lucas Mamani.</div>
+    </span>
   </footer>
 
 
